--- a/inst/doc/LiebermanAidenHiC2009.Rnw
+++ b/inst/doc/LiebermanAidenHiC2009.Rnw
@@ -98,7 +98,6 @@ which both ends aligned to chromosome 14, and to create the dataframe \Robject{H
 is provided in the package. 
 % 
 <<readtable, eval=FALSE>>=  
-inputDir = system.file("extdata", package="LiebermannAidenHiC2009.Rnw")
 inputDir = "/g/huber/course/LiebermanAidenHiC"
 df = vector(mode="list", length=nrow(sampleAnnotation))
 for(i in seq(along=df)) {
@@ -114,7 +113,7 @@ HiC_GM_chr14 = do.call(rbind, df)
 save(HiC_GM_chr14,
      file=file.path("..", "extdata", "HiC_GM_chr14.RData"))
 @ 
-\fixme{Move the files into the package, rather than /g/huber/course}
+\fixme{Move this file into the package, so that it can be loaded with \Rfunction{data}, and add a man page.}
   
 %---------------------------------------------------------
 \section{The adjacency matrix for chromosome 14}
@@ -129,7 +128,7 @@ pos = with(HiC_GM_chr14, cbind(position1, position2))
 <<figscatter1,eval=FALSE>>=
 plot(pos, pch='.', col="#77777777")
 @
-<<figscatter2>>=
+<<figscatter2,echo=FALSE,results=hide>>=
 png("figscatter.png",width=1024,height=1024)
 plot(pos, pch='.', col="#77777777")
 dev.off()
@@ -182,16 +181,23 @@ m = m + t(m)
 diag(m) = mean(diag(den$fhat))
 @
 
+We plot the matrix \Robject{m} (Figure~\ref{figmatm}).
+<<figmatm,fig=TRUE,width=7,height=7>>=
+image(x=den$x1, y=den$x2, z=m^0.3, 
+      col=colorRampPalette(c("white","blue"))(256), useRaster=TRUE)
+@ 
+\myfig{figmatm}{0.75\textwidth}{%
+  The matrix \Robject{m}.}
+
 With the calculated matrix of average interactions we can normalize our data by dividing the two matrices 
 and plot the result (Figure~\ref{figmatrix2}).
 %
 <<normalize, cache=TRUE>>=
-normDen <- den
-normDen$fhat <- normDen$fhat/m
+fhatNorm <- den$fhat/m
 @ 
 <<figmatrix2,fig=TRUE,width=7,height=7>>=
-with(normDen, image(x=x1, y=x2, z=fhat, 
-      col=colorRampPalette(c("white","blue"))(256), useRaster=TRUE))
+image(x=den$x1, y=den$x2, z=fhatNorm, 
+      col=colorRampPalette(c("white","blue"))(256), useRaster=TRUE)
 @
 
 \myfig{figmatrix2}{0.75\textwidth}{%
@@ -203,15 +209,13 @@ of the of the row $i$ with row $j$.
 Using a third color in the plot, we can see that the chromosome basically splits into 2 compartments.
 
 <<cormatrix, cache=TRUE>>=
-cm <- cor(normDen$fhat)
-corDen <- normDen
-corDen$fhat <- cm
+cm <- cor(fhatNorm)
 @ 
 
 <<figmatrix3,fig=TRUE,width=7,height=7>>=
-with(corDen, image(x=x1,y=x2,z=fhat, 
+image(x=den$x1, y=den$x2, z=cm, 
      zlim=c(-1,1),
-     col=colorRampPalette(c("red", "white","blue"))(256), useRaster=TRUE))
+     col=colorRampPalette(c("red", "white","blue"))(256), useRaster=TRUE)
 @
 
 The result is shown in Figure~\ref{figmatrix3}.
@@ -222,7 +226,7 @@ The result is shown in Figure~\ref{figmatrix3}.
 As next step we perform a principal component analysis on the matrix and retrieve the first two eigenvectors. Because we want to compare these vectors to ChIP-seq experiments of histone modifications and DNAse1 sensitivity, we use run-length encoding (\Rclass{Rle}) to store the vectors. \fixme{Explain \Rclass{Rle} - it is an efficient way of long sequences that have long constant runs.}  
 
 <<cormatrix, cache=TRUE>>=
-princp = princomp(corDen$fhat)
+princp = princomp(cm)
 @ 
 <<figprcomp1, fig=TRUE,width=8>>=
 plot(princp$loadings[,1])
@@ -231,11 +235,12 @@ See Figure~\ref{figprcomp1}.
 \myfig{figprcomp1}{0.8\textwidth}{%
   \Robject{princp\$loadings[,1]}.}
 
-<<pc1Vec>>=
+<<pc1Vec,results=hide>>=
+library("IRanges")
 pc1Vec = Rle(values  = princp$loadings[,1],
-             lengths = c(normDen$x1[1], diff(normDen$x1)))
+             lengths = c(den$x1[1], diff(den$x1)))
 pc2Vec = Rle(values  = princp$loadings[,2],
-             lengths = c(normDen$x1[1], diff(normDen$x1)))
+             lengths = c(den$x1[1], diff(den$x1)))
 @
 
 %---------------------------------------------------------
@@ -251,10 +256,11 @@ We are only interested in data for chromosome 14. For each peak, we want the sta
 To read the data, we use the following function.
 %
 <<readchipseq, results=hide>>=
-library("IRanges")
 createRleVector = function(file){
-  tab = read.table(gzfile(file), header=FALSE, sep="\t", comment.char = "", stringsAsFactors=FALSE)
-  colnames(tab) <- c("chr", "start", "end", "name", "score", "strand", "signalValue", "pValue", "qValue")
+  tab = read.table(gzfile(file), header=FALSE, sep="\t", comment.char = "", 
+            stringsAsFactors=FALSE)
+  colnames(tab) <- c("chr", "start", "end", "name", "score", "strand", 
+                     "signalValue", "pValue", "qValue")
   ## filter chromosom 14
   tab = tab[tab$chr == "chr14",]  
   RleVec = Rle(0, max(tab$end))
