Added John as an authors
git-svn-id: file:///home/git/bioc-data.hedgehog.fhcrc.org/trunk/experiment/pkgs/LiebermanAidenHiC2009@1670 db2202da-8704-0410-b924-b125b3cd84ef

--- a/inst/doc/LiebermanAidenHiC2009.Rnw
+++ b/inst/doc/LiebermanAidenHiC2009.Rnw
@@ -33,7 +33,7 @@
 \renewcommand{\floatpagefraction}{0.9}	
 
 \title{\textsf{\textbf{Exploration of HiC data}}}
-\author{Felix Klein, Wolfgang Huber}
+\author{Felix Klein, John Marioni, Wolfgang Huber}
 \begin{document}
 \maketitle
 \begin{abstract}
